# aggkit-proxy

./: .dockerignore  .gitignore  .kurtosisignore  API.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.miden-node  Dockerfile.test  Makefile  README.md  best-practices.md  docker-compose.local.yml  docker-compose.test.yml  docker-compose.yml  kurtosis.yml  main.star  miden-node-1558.patch  pytest.ini  state.json
.github/workflows/: ci.yml
cache/: solidity-files-cache.json
config/: config.kurtosis-cdk.toml  genesis.toml
docs/: BRIDGE-FLOW.md  DEBUGGING.md  TESTING.md  eip-8141-vs-miden-txs.md  ger-injection-audit.md  kurtosis-cdk-integration-plan.md  stress-test-report.md
examples/: gen_signed_tx.rs
kurtosis/: aggkit-proxy-miden.star  kurtosis.yml  main.star  miden_proxy.star
kurtosis/miden-cdk/: bridge_service.star  kurtosis.yml  main.star  miden_services.star  params.yaml
kurtosis/miden-cdk/web-ui/: Dockerfile  app.js  docker-entrypoint.sh  index.html  style.css
kurtosis/templates/: miden-params.yaml
patches/: 001-ger-sync-retry.patch  002-claim-debug-logging.patch  003-claim-cancellation-debug.patch  004-aggkit-ethtxmanager-already-exists.patch  005-bridge-out-false-block-advance.patch  005-ger-block-assignment-logging.patch  006-bridge-out-tool-retry.patch  add-agglayer-genesis.sh
scripts/: bridge-erc20-test.sh  bridge-out-test.sh  check-bridge-events.sh  check-certificates.sh  check-l2-deposits.sh  claim-note.sh  e2e-deposit-test.sh  e2e-kurtosis-miden.sh  e2e-kurtosis.sh  e2e-test.sh  graduated-stress-test.sh  health-check.sh  jsonrpc-snoop.py  l2-bridge-out.sh  list-notes.sh  list-unclaimed-notes.sh  send-deposit.sh  start-all.sh  start-miden-node.sh  start-proxy.sh  stop-kurtosis.sh  stress-status.sh  stress-test.sh  test-kurtosis-cdk.sh  test-lumia-claims.sh  test-rlp-claims.sh  verify-claim-notes.sh  verify-notes.sh
scripts/.aggkit-001-config/: container-inspect.json
scripts/.aggkit-001-config/aggkit-full/: config.toml.bak
scripts/.aggkit-config/: config.toml.bak  container-inspect.json
scripts/.aggkit-config/aggkit-full/: aggoracle.keystore  config.toml  config.toml.bak  sequencer.keystore  sovereignadmin.keystore
scripts/lib/: topology.sh
src/: address_mapper.rs  agglayer_faucet.rs  asset_mapping.rs  block_state.rs  claim_tracker.rs  client.rs  config.rs  decode.rs  error.rs  lib.rs  log_synthesis.rs  main.rs  receipt.rs  storage.rs  types.rs
tests/: __init__.py  conftest.py  phase1.rs  phase2.rs  phase3.rs
tests/common/: mod.rs
tests/phase1/: __init__.py  test_tc_1_1_connectivity.py  test_tc_1_2_accounts.py  test_tc_1_3_faucet.py  test_tc_1_4_minting.py  test_tc_1_5_consumption.py  test_tc_1_6_p2id.py  test_tc_1_7_state.py
tests/phase2/: __init__.py  test_tc_2_10_global_index.py  test_tc_2_1_faucet_deployment.py  test_tc_2_2_bridge_account.py  test_tc_2_3_claim_note_creation.py  test_tc_2_4_claim_execution.py  test_tc_2_5_output_verification.py  test_tc_2_6_recipient_consumption.py  test_tc_2_7_invalid_claims.py
tests/phase3/: __init__.py  test_tc_3_10_receipt_polling.py  test_tc_3_11_receipt_format.py  test_tc_3_12_error_cases.py  test_tc_3_13_service_errors.py  test_tc_3_14_edge_cases.py  test_tc_3_15_replay_prevention.py  test_tc_3_1_proxy_connectivity.py  test_tc_3_2_proxy_gas.py  test_tc_3_3_proxy_nonce.py  test_tc_3_4_proxy_call.py  test_tc_3_5_l1_deposit.py  test_tc_3_6_bridge_sync.py  test_tc_3_7_claimtxman.py  test_tc_3_8_proxy_tx_processing.py  test_tc_3_9_miden_state.py
web-ui/: app.js  docker-entrypoint.sh  index.html  style.css
