[package]
name = "miden-rpc-proxy"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "JSON-RPC proxy server bridging Ethereum-style RPC to Miden network"
license = "MIT"

[dependencies]
# RPC server
jsonrpsee = { version = "0.26", features = ["server", "macros"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP middleware
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# Ethereum types
alloy-primitives = "0.8"
alloy-rlp = "0.3"
alloy-rpc-types = "0.8"
alloy-consensus = { version = "0.8", features = ["k256"] }

# miden-client (pinned by rev to ajl-agglayer-integration-tests-v0.14.0 branch head for reproducibility)
miden-client = { git = "https://github.com/0xMiden/miden-client.git", rev = "f7cdf263781999e8f81ba608f9c5a91218747d98", default-features = false, features = ["testing", "tonic"] }
miden-client-sqlite-store = { git = "https://github.com/0xMiden/miden-client.git", rev = "f7cdf263781999e8f81ba608f9c5a91218747d98" }

# miden-base — loose caret pins. Pinning to `=0.14.4` exactly caused a runtime
# STARK verification regression in the miden-node NTX builder; the 0.14.6
# transitive node deps that cargo picks when left alone are what actually work
# with miden-client @ f7cdf26 in practice. Keep the caret; rely on the git rev
# pin above for reproducibility.
miden-protocol = { version = "0.14", default-features = false, features = ["std"] }
miden-standards = { version = "0.14", default-features = false }
miden-agglayer = { version = "0.14" }
miden-tx = { version = "0.14", default-features = false }

# Additional dependencies
sha3 = "0.10"
dashmap = "6"
rusqlite = { version = "0.37", features = ["bundled"] }
alloy-sol-types = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
hex = "0.4"

# Error handling and logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Concurrency
parking_lot = "0.12"

# Random number generation
rand = "0.9"
rand_chacha = "0.9"

# CLI parsing
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
rand = "0.9"
k256 = "0.13"
# Enable testing feature for miden-protocol in tests (for AccountId::dummy)
miden-protocol = { version = "0.14", default-features = false, features = ["std", "testing"] }

[[bin]]
name = "verify-notes"
path = "src/bin/verify_notes.rs"

[[bin]]
name = "claim-note"
path = "src/bin/claim_note.rs"

[[example]]
name = "gen_signed_tx"
path = "examples/gen_signed_tx.rs"

[profile.release]
lto = true
codegen-units = 1
