[package]
name = "miden-rpc-proxy"
version = "0.2.0"
edition = "2021"
rust-version = "1.82"
description = "Stub library + miden-client integration test fixtures (proxy supplanted by gateway-fm/miden-agglayer)"
license = "MIT"

[dependencies]
# Miden crates — aligned with gateway-fm/miden-agglayer (the supplanting proxy
# deployed in Kurtosis). Pinning to v0.14.4 matches the proto-build 0.14.9
# schema (`repeated NoteHeader`) that miden-node v0.14.7+ speaks. Bumping
# these MUST stay in lockstep with miden-agglayer's Cargo.toml or
# sync_transactions fails with `invalid wire type` decode loops.
miden-client = { git = "https://github.com/0xMiden/miden-client", tag = "v0.14.4", features = ["testing", "tonic"] }
miden-client-sqlite-store = { git = "https://github.com/0xMiden/miden-client", tag = "v0.14.4", package = "miden-client-sqlite-store" }

# Miden base crates — loose carets so cargo picks the exact subversion
# miden-client v0.14.4 requires transitively.
miden-protocol = { version = "0.14", features = ["std"] }
miden-standards = { version = "0.14" }
miden-tx = { version = "0.14" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"
tempfile = "3"
rand = "0.9"

[profile.release]
lto = true
codegen-units = 1
