[package]
name = "miden-rpc-proxy"
version = "0.2.0"
edition = "2021"
rust-version = "1.82"
description = "Stub library + miden-client integration test fixtures (proxy supplanted by gateway-fm/miden-agglayer)"
license = "MIT"

[dependencies]
# Miden crates — aligned with gateway-fm/miden-agglayer (the supplanting proxy
# deployed in Kurtosis). Protocol 0.15.x migration: must stay in lockstep with
# miden-agglayer's Cargo.toml. The matching miden-client (0.15.0) is not yet
# tagged, so we track the upstream protocol-0.15 migration branch
# (PR 0xMiden/miden-client#2224) until a v0.15.x tag ships; re-pin to the tag then.
miden-client = { git = "https://github.com/0xMiden/miden-client", branch = "mmagician-claude/agglayer-v0.15", features = ["testing", "tonic"] }
miden-client-sqlite-store = { git = "https://github.com/0xMiden/miden-client", branch = "mmagician-claude/agglayer-v0.15", package = "miden-client-sqlite-store" }

# Miden base crates — released on crates.io at 0.15.2.
miden-protocol = { version = "0.15", features = ["std"] }
miden-standards = { version = "0.15" }
miden-tx = { version = "0.15" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"
tempfile = "3"
rand = "0.9"

[profile.release]
lto = true
codegen-units = 1
